Cleared out the last off the latex template

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -51,21 +51,16 @@
 \markboth{G. Zhou et al.}{A Multifrequency MAC Specially Designed for WSN Applications}
 
 % Title portion
-\title{A Multifrequency MAC Specially Designed for Wireless Sensor Network Applications}
-\author{GANG ZHOU
-\affil{College of William and Mary}
-YAFENG WU
-\affil{University of Virginia}
-TING YAN
-\affil{Eaton Innovation Center}
-TIAN HE
-\affil{University of Minnesota}
-CHENGDU HUANG
-\affil{Google}
-JOHN A. STANKOVIC
-\affil{University of Virginia}
-TAREK F. ABDELZAHER
-\affil{University of Illinois at Urbana-Champaign}}
+\title{Dynamic obstacle mapping for the visually impaired using sensor fusion.}
+\author{Johann Thor Kristthorsson
+\affil{University College London}
+Ify Ndu
+\affil{University College London}
+Veselin Pavlov
+\affil{University College London}
+Shuang Zhang
+\affil{University College London}
+}
 % NOTE! Affiliations placed here should be for the institution where the
 %       BULK of the research was done. If the author has gone to a new
 %       institution, before publication, the (above) affiliation should NOT be changed.
@@ -83,52 +78,48 @@ Multifrequency media access control has been well understood in
 % http://dl.acm.org/ccs.cfm
 % Please copy and paste the code instead of the example below. 
 %
-\begin{CCSXML}
-<ccs2012>
- <concept>
-  <concept_id>10010520.10010553.10010562</concept_id>
-  <concept_desc>Computer systems organization~Embedded systems</concept_desc>
-  <concept_significance>500</concept_significance>
- </concept>
- <concept>
-  <concept_id>10010520.10010575.10010755</concept_id>
-  <concept_desc>Computer systems organization~Redundancy</concept_desc>
-  <concept_significance>300</concept_significance>
- </concept>
- <concept>
-  <concept_id>10010520.10010553.10010554</concept_id>
-  <concept_desc>Computer systems organization~Robotics</concept_desc>
-  <concept_significance>100</concept_significance>
- </concept>
- <concept>
-  <concept_id>10003033.10003083.10003095</concept_id>
-  <concept_desc>Networks~Network reliability</concept_desc>
-  <concept_significance>100</concept_significance>
- </concept>
-</ccs2012>  
-\end{CCSXML}
+% \begin{CCSXML}
+% <ccs2012>
+%  <concept>
+%   <concept_id>10010520.10010553.10010562</concept_id>
+%   <concept_desc>Computer systems organization~Embedded systems</concept_desc>
+%   <concept_significance>500</concept_significance>
+%  </concept>
+%  <concept>
+%   <concept_id>10010520.10010575.10010755</concept_id>
+%   <concept_desc>Computer systems organization~Redundancy</concept_desc>
+%   <concept_significance>300</concept_significance>
+%  </concept>
+%  <concept>
+%   <concept_id>10010520.10010553.10010554</concept_id>
+%   <concept_desc>Computer systems organization~Robotics</concept_desc>
+%   <concept_significance>100</concept_significance>
+%  </concept>
+%  <concept>
+%   <concept_id>10003033.10003083.10003095</concept_id>
+%   <concept_desc>Networks~Network reliability</concept_desc>
+%   <concept_significance>100</concept_significance>
+%  </concept>
+% </ccs2012>  
+% \end{CCSXML}
 
-\ccsdesc[500]{Computer systems organization~Embedded systems}
-\ccsdesc[300]{Computer systems organization~Redundancy}
-\ccsdesc{Computer systems organization~Robotics}
-\ccsdesc[100]{Networks~Network reliability}
+% \ccsdesc[500]{Computer systems organization~Embedded systems}
+% \ccsdesc[300]{Computer systems organization~Redundancy}
+% \ccsdesc{Computer systems organization~Robotics}
+% \ccsdesc[100]{Networks~Network reliability}
 
 
-\keywords{Wireless sensor networks, media access control,
-multi-channel, radio interference, time synchronization}
+\keywords{Sensor Fusion, Software Engineering,
+Visually Impaired, Blind, Microsoft}
 
-\acmformat{Gang Zhou, Yafeng Wu, Ting Yan, Tian He, Chengdu Huang, John A. Stankovic,
-and Tarek F. Abdelzaher, 2010. A multifrequency MAC specially
-designed for  wireless sensor network applications.}
+\acmformat{Johann Thor Kristthorsson, Ify Ndu, Veselin Pavlov and Shuang Zhang, 2016. Multifrequency media access control has been well understood in.}
 
 
 \begin{bottomstuff}
-This work is supported by the National Science Foundation, under
-grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
+This work was made in collaboration with Microsoft and the Guide Dogs association.
 \end{bottomstuff}
 
 \maketitle
-
 
 \section{Introduction}
 
@@ -151,10 +142,6 @@ grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
 \subsection{Basic Notations}
 
 
-\section{Simulator}
-\label{sec:sim}
-
-
 \subsection{Problem Formulation}
 
 
@@ -171,14 +158,14 @@ grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
 
 % Acknowledgments
 \begin{acks}
-\end{acks}
+\end{acks}  
 
 % Bibliography
 \bibliographystyle{ACM-Reference-Format-Journals}
 \bibliography{GroupReport-bibfile}
 
 % History dates
-\received{February 2007}{March 2009}{June 2009}
+%\received{February 2007}{March 2009}{June 2009}
 
 % Electronic Appendix
 \elecappendix
