--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -54,7 +54,7 @@
 \title{Dynamic obstacle mapping for the visually impaired using sensor fusion.}
 \author{Johann Thor Kristthorsson
 \affil{University College London}
-Ify Ndu
+Ifeanyi Ndu
 \affil{University College London}
 Veselin Pavlov
 \affil{University College London}
@@ -112,7 +112,7 @@ Multifrequency media access control has been well understood in
 \keywords{Sensor Fusion, Software Engineering,
 Visually Impaired, Blind, Microsoft}
 
-\acmformat{Johann Thor Kristthorsson, Ify Ndu, Veselin Pavlov and Shuang Zhang, 2016. Multifrequency media access control has been well understood in.}
+\acmformat{Johann Thor Kristthorsson, Ifeanyi Ndu, Veselin Pavlov and Shuang Zhang, 2016. Multifrequency media access control has been well understood in.}
 
 
 \begin{bottomstuff}
