--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -140,7 +140,7 @@ We will do this by employing a range of wearable  sensors to build a dynamic map
 \subsection{Preliminary work}
 The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in pre-defined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.\\
 The use cases that were to be explore were centered around detecting gestures and possible indoor location possibilities.\\
-However, soon after the project was presented to the team the hardware was found to have several major flaws. The team found that the location accuracy was conciderably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
+However, soon after the project was presented to the team the hardware was found to have several major flaws. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
 This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\
 %TODO: citation
 Another limitation of the hardware is that it only functions if 3 beacons are within a 130\degree cone infront of the receiver. This severly limits the usefulness of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment.\\
