#IN-73 Mock and prep for unit tests

--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -114,7 +114,7 @@ Abstract goes here
 \keywords{Sensor Fusion, Software Engineering,
 Visually Impaired, Blind, Microsoft}
 
-\acmformat{Johann Thor Kristthorsson, Ifeanyi Ndu, Veselin Pavlov and Shuang Zhang, 2016. Multifrequency media access control has been well understood in.}
+\acmformat{Johann Thor Kristthorsson, Ifeanyi Ndu, Veselin Pavlov and Shuang Zhang, 2016.}
 
 
 \begin{bottomstuff}
@@ -138,12 +138,13 @@ We will do this by employing a range of wearable  sensors to build a dynamic map
 
 \section{Proposed System}
 \subsection{Preliminary work}
-The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in pre-defined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.\\
+The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.
+
 The use cases that were to be explore were centered around detecting gestures and possible indoor location possibilities.\\
 However, soon after the project was presented to the team the hardware was found to have several major flaws. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
 This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\
 %TODO: citation
-Another limitation of the hardware is that it only functions if 3 beacons are within a 130\degree cone infront of the receiver. This severly limits the usefulness of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment.\\
+Another limitation of the hardware is that it only functions if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the usefulness of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment.\\
 %TODO: citation
 Our initial contact with the client was a brainstorming session where he expressed his vision for the project. Ideas were then bounced around and a subject area was found that was open for research and of value to our client.\\
 Microsoft Research have done some investigation into using Sensor Fusion
@@ -180,8 +181,6 @@ Jira, Slack Maybe not needed.
 \subsubsection{Communication}
 Talk about our communication and meeting schedule.
 
-\subsubsection{Challenges}
-Is this the place to mention the challenges we faced with our client communication? 
 
 \subsection{Testing}
 Show how our integration and load testing evaluates our architecture and a discussion of why it fits well
@@ -192,9 +191,9 @@ Metrics and graphs showing the performance of certain parts of the project.
 \subsection{Challenges}
 Discuss what challenges the architecture faces and what can be done to mitigate them
 
-\section{Lessons Learnt}
+\section{Lessons Learned}
 
-\section{Lifecycle and Future Work}
+\section{Life cycle and Future Work}
 \subsection{Current state}
 Describe the current state of the project\\
 Capabilities, how many of the Goals and Requirements have been fulfilled.\\
