First reiteration of the Intro and Lit Review

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -33,7 +33,7 @@
   url="http://dx.doi.org/10.1007/s00371-006-0032-4"
 }
 
-@Inbook{Shin2007,
+@Inbook{ Shin2007,
   author="Shin, Byeong-Seok and Lim, Cheol-Su",
   editor="Oakley, Ian and Brewster, Stephen",
   title="Obstacle Detection and Avoidance System for Visually Impaired People",
@@ -108,4 +108,16 @@
   year      = 2007
 }
 
-http://archive.darpa.mil/grandchallenge/
+@misc{NHSBlindStatistics,
+  title         = {Blindness and vision loss, NHS website},
+  howpublished  = {\url{http://www.nhs.uk/conditions/Visual-impairment/Pages/Introduction.aspx}},
+  note          = {Accessed: 2016-08-08},
+  year          = 2016
+}
+
+@misc{CitiesUnlockedGeneral, 
+  title         = {Cities Unlocked website},
+  howpublished  = {\url{http://www.citiesunlocked.org.uk/about}},
+  note          = {Accessed: 2016-08-08},
+  year          = 2016
+}
