--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -124,45 +124,28 @@ This work was made in collaboration with Microsoft and the Guide Dogs associatio
 \maketitle
 
 \section{Introduction}
-% Discuss prior work and the Cities Unlocked project briefly
-We are working with Microsoft and the Guide Dogs Association to develop solutions for the visually impaired, to help them tackle the challenges of day to day tasks and empower them to participate in society in the same way as the non visually impaired.\\
-The project falls under the Cities Unlocked 
-%TODO: Citation
-umbrella, an initiative that was started to respond to the lack of available guide dogs in the UK.\\
-We aim to improve the experience of the members of the visually impaired population when entering specific indoor environments.
-We will focus on environments that are unfamiliar to the user and that are not equipped with any specific navigation infrastructure beforehand.
-We will do this by employing a range of wearable  sensors to build a dynamic map of the environment and give the user feedback on their surroundings.
+There are two million people living with visual impairment in the UK and despite that fact indoor environments are often not designed with this large group of people in mind. ~\cite{NHSBlindStatistics} This means that the visually impaired have to depend on mobility tools to make their way around their environment. Mobility canes and guide dogs are the most important ones but are limited in their use. The canes have limited use to a person needing to navigate from place to place and the guide dogs are not currently available to all visually impaired persons in the UK. The Guide Dogs Association is working towards the goal of providing as many people with guide dogs as possible but are not able to meet demand. The project falls under the Cities Unlocked umbrella, an initiative that was started to respond to the lack of available guide dogs in the UK ~\cite{CitiesUnlockedGeneral}. Cities Unlocked has recently been moving more towards improving and enriching the experiences of the visually impaired, rather than focusing solely on their mobility.
+
+Microsoft has been exploring different technologies that could help the visually impaired in their day to day lives and wanted to elicit the help of UCL in this exploration. A team of 8 MSc students, 4 from software systems engineering and 4 from computer science, was put together and that team took Microsoft and the Guide Dogs Association on as clients for this project. To clarify the specific topic of the project several brainstorming sessions were held to explore the aims and goals. The specific field of study that the clients wanted the team to explore was the use of wearable sensors that could be used by the visually impaired. Additionally the clients wanted to use cheap, off the shelf, hardware and use a technique called Sensor Fusion to maintain accuracy.
+After exploring several possible use cases for these technologies the client and the UCL team decided to find a way to improve the experience of the members of the visually impaired population when entering specific indoor environments.
+Specifically in environments that are unfamiliar to the user and that are not equipped with any specific navigation infrastructure. There has already been thorough research done on indoor navigation but the identification of obstacles seemed to be a good fit for the hardware and technology requirements of the client.
+
 \section{Literature review}
-Obstacle detection is a large topic and has been a popular topic in the last few years with the advent of autonomous vehicles and unmanned aerial vehicles (UAVs).
-The DARPA Grand Challenge in 2005 and the Urban Challenge 2007 offered millions of dollars in prizes and sparked great interest within the research community. ~\cite{DARPAGrandChallenge2005} ~\cite{DARPAUrbanChallenge2007}
-In the specific case of obstacle detection as an assistive technology for the visually impaired there have been several projects. Cardin et al developed a wearable system that uses an array of ultrasonic transducers to do sonar sensing of obstacles around a subject. The subject is notified of the obstacles through vibrotactile instruments sown into clothing around the subjects torso. Experiments were conducted by blindfolding test subjects and having them navigate an environment filled with obstacles. The time it took the subjects to navigate was recorded and a the use of the system resulted in a 50\% reduction in navigation time after a short training time. ~\cite{Cardin2007} The system developed by Shin et al is similar but adds voice navigation through a headset. ~\cite{Shin2007} These kinds of reactive methods are common and widely explored both for the purposes of visually impaired navigation and for small robots or autonomous vehicles. ~\cite{Kato2002}
-Shoval et al have made attempts to fuse the work done in autonomous driving and robotics with the work in assistive technologies. They did this by mounting sonar sensing hardware on a robot that serves the same purpose as a guide dog. It has one axle and wheels that are powered. The robot is pushed by the subject through a handle, the robot can then detect and avoid obstacles and the subject notices the change in the robots movements through the handle. ~\cite{Shoval2003}
-As with the work of Cardin et al and Shin et al these robotics and autonomous driving works deal with the detection of obstacles in the immediate vicinity of the subject but do not persist or collect the location of the obstacle in a central location for further analysis and reuse.
+Obstacle detection is a large topic and has been popular in the last few years with the advent of autonomous vehicles and unmanned aerial vehicles.
+The Defense Advanced Research Project Agency (DARPA) in the United States has held several competitions to push the research community towards this specific topic. The DARPA Grand Challenge in 2005 and the Urban Challenge in 2007 offered millions of dollars in prizes and sparked great interest within the research community ~\cite{DARPAGrandChallenge2005,DARPAUrbanChallenge2007}.
+\subsection{Obstacle detection}
+In the specific case of obstacle detection as an assistive technology there have been several papers exploring the topic. Cardin et al. developed a wearable system that uses an array of ultrasonic transducers to do sonar sensing of obstacles around a subject. The subject is notified of the obstacles through vibrotactile instruments sewn into clothing around the subjects torso. Experiments were conducted by blindfolding test subjects and having them navigate an environment filled with obstacles. The time it took the subjects to navigate was recorded and the use of the system resulted in a 50\% reduction in navigation time after a short training time ~\cite{Cardin2007}. The system developed by Shin et al. is similar to Cardin et al. but adds audible feedback through a headset ~\cite{Shin2007}. These methods are entirely reactive, in that they sense and identify obstacles in a space but do not record its position for possible future use. In addition to this the evaluation of the detection accuracy is lacking. The studies do not describe their experimental setups accurately and the data collection methods are never mentioned. 
+%These types of methods are common and widely explored both for the purposes of small robots and autonomous vehicles ~\cite{Kato2002}. 
+%Shoval et al. have made attempts to fuse the work done in autonomous driving and robotics with the work in assistive technologies. They did this by mounting sonar sensing hardware on a robot that serves the same purpose as a guide dog. It has one axle and wheels that are powered. The robot is pushed by the subject via a handle, the robot can then detect and avoid obstacles and the subject notices the change in the robots movements through the handle ~\cite{Shoval2003}.
+\subsection{Sensor Fusion}
+Sensor fusion, or cooperative fusion, is a well known term in the context of obstacle detection and navigation. Labayrade et al. describe algorithms and architectures that facilitate cooperative fusion of two different kinds of sensors, stereovision and LIDAR to detect obstacles in an autonomous driving scenario ~\cite{Labayrade2005}. Cooperative fusion is used to detect obstacles in the road in front of a vehicle and determine its distance with good accuracy. The use of sensor fusion decreased the rate of false negatives in the detection from 14.7\% and 5.2\% for LIDAR and stereovision respectively, down to 5.2\%. In addition the rate of false negatives went down from 4.5\% and 3.2\% respectively to 1.2\%. Cho et al. reached similar results showing an increase in the rate of true positives in obstacle detection from 83.2\% to 89.9\% by using fusion instead of using actual sensor values ~\cite{Cho2014}. Contrary to the research found for the use cases for the visually impaired these papers provide a thorough explanation of the evaluation and data gathering performed and will proved useful in designing the evaluation strategy for this project. These methods have been developed specifically for use in the scenario of autonomous driving but are directly applicable to the scenario of detecting obstacles around a visually impaired pedestrian.
 
-Sensor fusion is a well known term in the context of obstacle detection and navigation. Labayrade et al describe algorithms and architectures that facilitate cooperative fusion of two different kinds of sensors, stereovision and LIDAR to detect obstacles in an autonomous driving scenario. ~\cite{Labayrade2005} Cooperative fusion is used there to detect obstacles in the road in front of a vehicle and determine its distance with good accuracy. The use of sensor fusion decreased the rate of false negatives in the detection, from 14.7\% and 5.2\% for LIDAR and stereovision respectively, down to 5.2\%. In addition the rate of false negatives went from 4.5\% and 3.2\% respectively down to 1.2\%. Cho et al reach similar results showing increase in true positive obstacle detections from 83.2\% to 89.9\% by using fusion instead of using raw sensor values.~\cite{Cho2014}
-
-Therefore we proposed a project centered around gathering data from different sensors and using the collected data to determine the location of obstacles in a space.
-
+In light of research described in the literature reviewed the team will be able to reach the aforementioned aims of this project by developing a data collection platform that gathers data from many different cheap sensors. The sensor data will be used to identify obstacles and the accuracy of the results will be increased by using sensor fusion.
 
 \section{Proposed System}
 \subsection{Preliminary work}
-The initial plan for this project was to make use of hardware developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.
+% Subsection this into VI obstacle detection and Sensor fusion, then bring back together.
 
-The use cases that were to be explore were centered around detecting gestures and possible indoor location possibilities.\\
-However, soon after the project was presented to the team the hardware was found to have several major flaws. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimeter, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimeters.\\
-This eliminates the gesture use case since more accuracy is needed to get accurate gesture recognition.\\
-%TODO: citation
-Another limitation of the hardware is that it only functions if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the usefulness of the device for indoor location since a wearable piece of hardware is usually blocked by the wearers body in addition to any obstacle in the environment.\\
-%TODO: citation
-Our initial contact with the client was a brainstorming session where he expressed his vision for the project. Ideas were then bounced around and a subject area was found that was open for research and of value to our client.\\
-Microsoft Research have done some investigation into using Sensor Fusion
-%TODO: citation
-and wanted to see what applications for that technology in aiding the visually impaired.
-After the meeting the team met several times to brainstorm and research possible applications and decided on a few possible project proposals.
-These were presented to the client and he expressed interest in continuing with one of them.\\
-For the final project proposal our client agreed on a research area that will help the visually impaired navigate an indoor environment.
-Using sensor fusion the team was to build a system that can collect data from various disparate sensors and identify the location of the user and obstacles in it's environment.
-The goals is to use cheap, of-the-shelf, sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using various sensor fusion methods.
 %TODO: citation 
 
 \subsection{High level goals}
